billing  improvements
